fixed layout bug, working on contact form & email integration

--- a/src/layouts/MainLayout.module.css
+++ b/src/layouts/MainLayout.module.css
@@ -32,4 +32,7 @@
 
 .main {
   padding: 70px 0 54px 0;
+  display: flex;
+  flex-direction: column;
+  height: 100%
 }
