--- a/src/layouts/PageLayout.module.css
+++ b/src/layouts/PageLayout.module.css
@@ -4,4 +4,5 @@
 .pageContainer {
   background-color: light-dark(var(--mantine-color-blue-1), var(--mantine-color-indigo-1));
   min-width: 100%;
+  flex-grow: 1;
 }
